--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -18,6 +18,8 @@ jobs:
         run: |
           cargo_version=$(cat aws-integrations/aws-shipper-lambda/crago.toml | grep "version" | head -1 | awk -F '"' '{print $2}')
           template_version=$(cat aws-integrations/aws-shipper-lambda/template.yaml | grep "SemanticVersion" | grep -oE '[^ ]+$')
+          echo $cargo_version
+          echo \"template_version\"
           if [[ "$cargo_version" != \""$template_version"\" ]];then
             echo "not the same version"
           else
