--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -16,6 +16,14 @@ jobs:
           fetch-depth: 0 
       - name: check versions
         run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git pull origin master
+          echo pull
+          git fetch origin
+          echo fetch
+          echo ${{ github.head_ref }}
+          git switch --no-guess ${{ github.head_ref }}
           cargo_version=$(cat aws-integrations/aws-shipper-lambda/crago.toml | grep "version" | head -1 | awk -F '"' '{print $2}')
           template_version=$(cat aws-integrations/aws-shipper-lambda/template.yaml | grep "SemanticVersion" | grep -oE '[^ ]+$')
           echo $cargo_version
