--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -43,7 +43,9 @@ jobs:
           done
           if [ -z "$(ls -A "./template-directory")" ]; then
             echo "[INFO] No file in the integrations list where changed."
-            exit 1
+            echo "has_template_from_the_list_changed=false" >> $GITHUB_ENV
+          else
+            echo "has_template_from_the_list_changed=true" >> $GITHUB_ENV
           fi
 
       - name: Upload template-directory
@@ -66,6 +68,7 @@ jobs:
 
   create_pr:
     runs-on: ubuntu-latest
+    if: "${{ env.has_template_from_the_list_changed != false }}"
     needs: upload_files
     steps:
 
