--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -68,7 +68,7 @@ jobs:
 
   create_pr:
     runs-on: ubuntu-latest
-    if: "${{ ne(env.has_template_from_the_list_changed, 'false') }}"
+    if: "${{ env.has_template_from_the_list_changed }}"
     needs: upload_files
     steps:
       - name: Checkout destination repository
