--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -69,7 +69,7 @@ jobs:
 
   create_pr:
     runs-on: ubuntu-latest
-    if: "${{ env.has_template_from_the_list_changed }}"
+    if: ${{ env.has_template_from_the_list_changed }}
     needs: upload_files
     steps:
       - name: Checkout destination repository
