--- a/.github/workflows/synchronizing.yaml
+++ b/.github/workflows/synchronizing.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   upload_files:
     runs-on: ubuntu-latest
+    outputs:
+      change_file: ${{ env.has_template_from_the_list_changed }}
     name: upload files
     env:
       integration_list: "s3,s3-sns,cloudtrail,cloudtrail-sns,cloudwatch-logs,vpc-flow-logs,firehose,coraloigx-aws-shipper,aws-shipper-lambda"
@@ -69,7 +71,7 @@ jobs:
 
   create_pr:
     runs-on: ubuntu-latest
-    if: "${{ env.has_template_from_the_list_changed != 'false' }}"
+    if: "${{ needs.upload_files.outputs.change_file != 'false' }}"
     needs: upload_files
     steps:
       - name: Checkout destination repository
