--- a/opentelemetry/ecs-ec2/template.yaml
+++ b/opentelemetry/ecs-ec2/template.yaml
@@ -1,5 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: The template used to create an Otel ECS Service from on an ECS Console.
+Description: The template used to create an Otel ECS Service from on an ECS Console..
+
+
 
 Parameters:
   ClusterName:
