--- a/coralogix-eventbridge-policy /template.yaml
+++ b/coralogix-eventbridge-policy /template.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: The module will create a role with an inline policy to allow Coralogix to send events to an EventBridge event bus.
+Description: The module will create a role with an inline policy to allow Coralogix to send events to an EventBridge event bus..
 Parameters:
   EventBusArn:
     Type: String
